@@ -57,6 +57,16 @@
                             </oneOrMore>
                         </element>
                     </optional>
+                    <optional>
+                    	<element name="changelog">
+                    		<oneOrMore>
+                    			<element name="changes">
+	                    			<attribute name="version"><text /></attribute>
+	                    			<text />
+                    			</element>
+                    		</oneOrMore>
+                    	</element>
+                    </optional>
                 </interleave>
             </element>
         </oneOrMore>
